<resources>
    <string name="app_name" translatable="false">Trucks</string>
    <string name="tracking">Tracking</string>
    <string name="about_me">About Me</string>
    <string name="adding">Edit</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="password_hint_again">Repeat password</string>
    <string name="login_hint">Login</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Log Out</string>
    <string name="dont_have_acc">Don’t have account?</string>
    <string name="have_acc">Already have account?</string>
    <string name="tracker_hint">Enter a track-number here...</string>
    <string name="tracking_button">Tracking number</string>
    <string name="truck">Truck: </string>
    <string name="state">State: </string>
    <string name="start_date">Start Date: </string>
    <string name="done">Done</string>
    <string name="change">Change Data</string>
    <string name="delete">Delete Data</string>
    <string name="add">Add Data</string>
    <string name="track_number_in">Track number</string>
    <string name="truck_in">Truck</string>
    <string name="state_in">State</string>
    <string name="start_date_in">Start date</string>
</resources>