<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:backgroundTint="@color/app_background">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:foregroundGravity="center"
            app:srcCompat="@drawable/trackerlogo" />

        <EditText
            android:id="@+id/edRegLogin"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_background"
            android:backgroundTint="@color/edit_text_background"
            android:ems="10"
            android:hint="@string/login_hint"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/text_hint"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edRegPassword"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_background"
            android:backgroundTint="@color/edit_text_background"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/text_hint"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edRegEmail"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_background"
            android:backgroundTint="@color/edit_text_background"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/text_hint"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btLogIn"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            app:cornerRadius="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRegLogInConst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/have_acc"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvRegLogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:gravity="center"
                android:text="@string/log_in"
                android:textColor="@color/yellow" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>