<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/app_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:foregroundGravity="center"
            app:srcCompat="@drawable/trackerlogo" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvTrackError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/red"
            android:textSize="15sp"
            android:fontFamily="@font/nunito_bold"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/linearTrackerHide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <EditText
                android:id="@+id/edTrack"
                android:layout_width="400dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="@color/edit_text_background"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/tracker_hint"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/text_hint"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btTrack"
                android:layout_width="300dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/yellow"
                android:text="@string/tracking_button"
                android:textColor="@color/black"
                app:cornerRadius="4dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearTrackerHideInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvTrackNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTrackerTruckConst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_medium"
                    android:text="@string/truck"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvTrackerTruck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="3dp"
                    android:fontFamily="@font/nunito_bold"
                    android:foregroundGravity="center_vertical|center"
                    android:gravity="center"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTrackerStateConst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_medium"
                    android:text="@string/state"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvTrackerState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="3dp"
                    android:fontFamily="@font/nunito_bold"
                    android:foregroundGravity="center_vertical|center"
                    android:gravity="center"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTrackerDateConst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_medium"
                    android:text="@string/start_date"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvTrackerDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="3dp"
                    android:fontFamily="@font/nunito_bold"
                    android:foregroundGravity="center_vertical|center"
                    android:gravity="center"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btTrackerDone"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/yellow"
                android:foregroundGravity="center_vertical|center"
                android:gravity="center"
                android:text="@string/done"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>