<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/app_background"
            android:orientation="vertical">


            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvEditAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/nunito_medium"
                android:gravity="center"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvEditAddError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center"
                android:text=""
                android:textColor="@color/red"
                android:textSize="15sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/edEditAddTrackNumber"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="@color/edit_text_background"
                android:ems="10"
                android:fontFamily="@font/nunito_medium"
                android:hint="@string/track_number_in"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/text_hint"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/edEditAddTruck"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="@color/edit_text_background"
                android:ems="10"
                android:fontFamily="@font/nunito_medium"
                android:hint="@string/truck_in"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/text_hint"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edEditAddState"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="@color/edit_text_background"
                android:ems="10"
                android:fontFamily="@font/nunito_medium"
                android:hint="@string/state_in"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/text_hint"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edEditAddDateStart"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="@color/edit_text_background"
                android:ems="10"
                android:fontFamily="@font/nunito_medium"
                android:hint="@string/start_date_in"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/text_hint"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btEditAddData"
                android:layout_width="300dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/yellow"
                android:text="@string/add"
                android:textColor="@color/black"
                app:cornerRadius="4dp" />

            <TextView
                android:id="@+id/tvEditEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/nunito_medium"
                android:gravity="center"
                android:text="@string/change"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvEditEditError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center"
                android:text=""
                android:textColor="@color/red"
                android:textSize="15sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/edEditEditTrackNumber"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="@color/edit_text_background"
                android:ems="10"
                android:fontFamily="@font/nunito_medium"
                android:hint="@string/track_number_in"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/text_hint"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/edEditEditTruck"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="@color/edit_text_background"
                android:ems="10"
                android:fontFamily="@font/nunito_medium"
                android:hint="@string/truck_in"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/text_hint"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edEditEditState"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="@color/edit_text_background"
                android:ems="10"
                android:fontFamily="@font/nunito_medium"
                android:hint="@string/state_in"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/text_hint"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edEditEditDateStart"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="@color/edit_text_background"
                android:ems="10"
                android:fontFamily="@font/nunito_medium"
                android:hint="@string/start_date_in"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/text_hint"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btEditEditData"
                android:layout_width="300dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/yellow"
                android:text="@string/change"
                android:textColor="@color/black"
                app:cornerRadius="4dp" />

            <TextView
                android:id="@+id/tvEditDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/nunito_medium"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvEditDeleteError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center"
                android:text=""
                android:textColor="@color/red"
                android:textSize="15sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/edEditDeleteTrackNumber"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="@color/edit_text_background"
                android:ems="10"
                android:fontFamily="@font/nunito_medium"
                android:hint="@string/track_number_in"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/text_hint"
                android:textSize="18sp" />


            <Button
                android:id="@+id/btEditDeleteData"
                android:layout_width="300dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/yellow"
                android:text="@string/delete"
                android:textColor="@color/black"
                app:cornerRadius="4dp" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>